Redoing of herb descriptions and way of execution, tested and working. Next goal is herb priority.

--- a/src/main/resources/alchemyResources/localization/eng/Keywordstrings.json
+++ b/src/main/resources/alchemyResources/localization/eng/Keywordstrings.json
@@ -34,5 +34,12 @@
       "Herbs"
     ],
     "DESCRIPTION": "Ingredients used for #yBrewing stored in a #yPouch."
+  },
+  {
+    "PROPER_NAME": "Metallicize",
+    "NAMES": [
+      "metal"
+    ],
+    "DESCRIPTION": "Gain #yBlock at the end of you turn."
   }
 ]
