Thornybulb changed and priorities added to modifiers

--- a/src/main/resources/alchemyResources/localization/eng/Powerstrings.json
+++ b/src/main/resources/alchemyResources/localization/eng/Powerstrings.json
@@ -19,5 +19,12 @@
       "At the end of this turn, lose #b",
       " #yArtifact."
     ]
+  },
+  "${modID}:ThornsLoss": {
+    "NAME": "Thorns Down",
+    "DESCRIPTIONS": [
+      "At the end of this turn, lose #b",
+      " #Thorns."
+    ]
   }
 }
