--- a/src/main/resources/alchemyResources/localization/eng/UIstrings.json
+++ b/src/main/resources/alchemyResources/localization/eng/UIstrings.json
@@ -28,6 +28,12 @@
       " Herbs to Brew."
     ]
   },
+  "${ModID}:EatAction": {
+    "TEXT": [
+      "Choose ",
+      " Herbs to Eat."
+    ]
+  },
   "${ModID}:CopyCardAction": {
     "TEXT": [
       "Duplicate"
